#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-c"
version = "0.5.0-beta.8"
repository = "https://github.com/eclipse-zenoh/zenoh-c"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "The zenoh C client API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
zenoh = { git =  "https://github.com/eclipse-zenoh/zenoh" }
zenoh-protocol = { git =  "https://github.com/eclipse-zenoh/zenoh" }
zenoh-util = { git =  "https://github.com/eclipse-zenoh/zenoh" }
async-std = "=1.9.0"
futures = "0.3.12"
async-trait = "0.1.42"
spin = "0.7.1"
rand = "0.8.3"
cbindgen = "0.17.0"
libc = "0.2.85"
clap = "2.33.3"
env_logger = "0.8.2"

[lib]
name = "zenohc"
crate-type = ["cdylib"]

[package.metadata.deb.variants.libzenohc]
name = "libzenohc"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2020 ADLINK Technology Inc."
section = "net"
license-file = ["LICENSE", "0"]

[package.metadata.deb.variants.libzenohc-dev]
name = "libzenohc-dev"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2020 ADLINK Technology Inc."
section = "net"
license-file = ["LICENSE", "0"]
depends = "libzenohc (==0.5.0~beta.8)"
assets = [
    ["include/zenoh.h", "usr/include/", "755"],
    ["include/zenoh/net.h", "usr/include/zenoh/", "755"],
]